# r_fetcher

./: .gitignore  Cargo.toml
src/: data.json  from_lib.rs  lib.rs  main.rs  main2.rs  tempCodeRunnerFile.rs
src/dev/: mod.rs
src/dev/tr/: mod.rs
src/ex/: mod.rs
src/testsend/: mod.rs
