[package]
name = "r_fetcher"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Test deploy pakage"
authors = ["alexei.gaponov@gmail.com"]


[dependencies]
lazy_static = "1.4.0"
once_cell = "1.4.0"
futures = "0.3.28" 
async-std = "1.12.0" 
gotham = "0.7.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
