[package]
name = "r_fetcher"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Test deploy pakage"
authors = ["alexei.gaponov@gmail.com"]


[dependencies]
rand = "0.8.4"
serde_json = "1.0.104" 
serde = { version = "1.0.181", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
